--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "Dreamatti",
 	"license": "ISC",
 	"devDependencies": {
+		"@svgr/webpack": "^8.1.0",
 		"@types/react": "^17.0.39",
 		"@types/react-dom": "^17.0.11",
 		"@types/react-router-dom": "^5.3.3",
