--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
 		"webpack-dev-server": "^4.7.4"
 	},
 	"dependencies": {
+		"i18next": "^23.5.1",
+		"i18next-browser-languagedetector": "^7.1.0",
+		"i18next-http-backend": "^2.2.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-i18next": "^13.2.2",
 		"react-router-dom": "^6.2.1"
 	}
 }
