--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
 	"author": "Dreamatti",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/core": "^7.22.17",
+		"@babel/preset-env": "^7.22.15",
 		"@svgr/webpack": "^8.1.0",
 		"@types/react": "^17.0.39",
 		"@types/react-dom": "^17.0.11",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/webpack": "^5.28.0",
 		"@types/webpack-dev-server": "^4.7.2",
+		"babel-loader": "^9.1.3",
+		"babel-plugin-i18next-extract": "^0.9.0",
 		"css-loader": "^6.6.0",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
@@ -33,6 +37,7 @@
 		"webpack-dev-server": "^4.7.4"
 	},
 	"dependencies": {
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"i18next": "^23.5.1",
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.2",
