--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"build:prod": "webpack --env mode=production",
 		"build:dev": "webpack --env mode=development",
 		"lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
-		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix"
+		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+		"lint:scss": "npx stylelint \"**/*.scss\"",
+		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
 	},
 	"keywords": [],
 	"author": "Dreamatti",
@@ -29,6 +31,7 @@
 		"css-loader": "^6.6.0",
 		"eslint": "^8.49.0",
 		"eslint-config-standard-with-typescript": "^39.0.0",
+		"eslint-plugin-i18next": "^6.0.3",
 		"eslint-plugin-import": "^2.28.1",
 		"eslint-plugin-n": "^16.1.0",
 		"eslint-plugin-promise": "^6.1.1",
@@ -39,6 +42,8 @@
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
+		"stylelint": "^15.10.3",
+		"stylelint-config-standard-scss": "^11.0.0",
 		"ts-loader": "^9.2.6",
 		"ts-node": "^10.5.0",
 		"typescript": "^4.9.5",
