--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"@babel/core": "^7.22.17",
 		"@babel/preset-env": "^7.22.15",
 		"@svgr/webpack": "^8.1.0",
-		"@types/react": "^17.0.39",
-		"@types/react-dom": "^17.0.11",
+		"@types/react": "^17.0.65",
+		"@types/react-dom": "^17.0.20",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/webpack": "^5.28.0",
 		"@types/webpack-dev-server": "^4.7.2",
@@ -45,7 +45,7 @@
 		"stylelint": "^15.10.3",
 		"stylelint-config-standard-scss": "^11.0.0",
 		"ts-loader": "^9.2.6",
-		"ts-node": "^10.5.0",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5",
 		"webpack": "^5.69.1",
 		"webpack-cli": "^4.9.2",
@@ -53,12 +53,15 @@
 	},
 	"dependencies": {
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+		"@types/jest": "^29.5.5",
+		"@types/node": "^20.6.2",
 		"i18next": "^23.5.1",
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-i18next": "^13.2.2",
-		"react-router-dom": "^6.2.1"
+		"react-router-dom": "^6.2.1",
+		"ts-node-dev": "^2.0.0"
 	}
 }
