--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
 		"lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
 		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
-		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+		"unit": "npx jest --config ./config/jest/jest.config.ts"
 	},
 	"keywords": [],
 	"author": "Dreamatti",
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/core": "^7.22.17",
+		"@babel/core": "^7.22.19",
 		"@babel/preset-env": "^7.22.15",
+		"@babel/preset-typescript": "^7.22.15",
 		"@svgr/webpack": "^8.1.0",
+		"@types/jest": "^29.5.5",
 		"@types/react": "^17.0.65",
 		"@types/react-dom": "^17.0.20",
 		"@types/react-router-dom": "^5.3.3",
@@ -26,6 +29,7 @@
 		"@types/webpack-dev-server": "^4.7.2",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
+		"babel-jest": "^29.7.0",
 		"babel-loader": "^9.1.3",
 		"babel-plugin-i18next-extract": "^0.9.0",
 		"css-loader": "^6.6.0",
@@ -38,6 +42,8 @@
 		"eslint-plugin-react": "^7.33.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"mini-css-extract-plugin": "^2.5.3",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
@@ -53,7 +59,6 @@
 	},
 	"dependencies": {
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-		"@types/jest": "^29.5.5",
 		"@types/node": "^20.6.2",
 		"i18next": "^23.5.1",
 		"i18next-browser-languagedetector": "^7.1.0",
