--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"babel-plugin-i18next-extract": "^0.9.0",
 		"css-loader": "^6.6.0",
 		"eslint": "^8.49.0",
+		"eslint-config-prettier": "^9.0.0",
 		"eslint-config-standard-with-typescript": "^39.0.0",
 		"eslint-plugin-i18next": "^6.0.3",
 		"eslint-plugin-import": "^2.28.1",
@@ -45,6 +46,7 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"mini-css-extract-plugin": "^2.5.3",
+		"prettier": "3.0.3",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
