--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/core": "^7.22.19",
-		"@babel/preset-env": "^7.22.15",
+		"@babel/preset-env": "^7.22.20",
+		"@babel/preset-react": "^7.22.15",
 		"@babel/preset-typescript": "^7.22.15",
 		"@svgr/webpack": "^8.1.0",
+		"@testing-library/jest-dom": "^6.1.3",
+		"@testing-library/react": "^14.0.0",
 		"@types/jest": "^29.5.5",
 		"@types/react": "^17.0.65",
 		"@types/react-dom": "^17.0.20",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/webpack": "^5.28.0",
+		"@types/webpack-bundle-analyzer": "^4.6.0",
 		"@types/webpack-dev-server": "^4.7.2",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
@@ -38,15 +42,19 @@
 		"eslint-config-standard-with-typescript": "^39.0.0",
 		"eslint-plugin-i18next": "^6.0.3",
 		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-jest-dom": "^5.1.0",
 		"eslint-plugin-n": "^16.1.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.33.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "3.0.3",
+		"react-test-renderer": "^18.2.0",
+		"regenerator-runtime": "^0.14.0",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
@@ -56,6 +64,7 @@
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5",
 		"webpack": "^5.69.1",
+		"webpack-bundle-analyzer": "^4.9.1",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.7.4"
 	},
@@ -65,10 +74,10 @@
 		"i18next": "^23.5.1",
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.2",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "^18.2.0",
 		"react-i18next": "^13.2.2",
-		"react-router-dom": "^6.2.1",
+		"react-router": "^6.16.0",
+		"react-router-dom": "^6.16.0",
 		"ts-node-dev": "^2.0.0"
 	}
 }
