--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"i18n-ally.localesPaths": ["public/locales", "src/shared/config/i18n"],
-	"i18n-ally.keystyle": "nested"
+	"i18n-ally.keystyle": "nested",
+	"cSpell.words": ["lcov", "mtdm"]
 }
