--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-		"unit": "npx jest --config ./config/jest/jest.config.ts"
+		"unit": "npx jest --config ./config/jest/jest.config.ts",
+		"storybook": "storybook dev -p 6006 -c ./config/storybook",
+		"build-storybook": "storybook build"
 	},
 	"keywords": [],
 	"author": "Dreamatti",
@@ -21,6 +23,15 @@
 		"@babel/preset-env": "^7.22.20",
 		"@babel/preset-react": "^7.22.15",
 		"@babel/preset-typescript": "^7.22.15",
+		"@storybook/addon-essentials": "^7.4.2",
+		"@storybook/addon-interactions": "^7.4.2",
+		"@storybook/addon-links": "^7.4.2",
+		"@storybook/addon-onboarding": "^1.0.8",
+		"@storybook/addon-styling": "^2.0.2-next.4",
+		"@storybook/blocks": "^7.4.2",
+		"@storybook/react": "^7.4.2",
+		"@storybook/react-webpack5": "^7.4.2",
+		"@storybook/testing-library": "^0.2.1",
 		"@svgr/webpack": "^8.1.0",
 		"@testing-library/jest-dom": "^6.1.3",
 		"@testing-library/react": "^14.0.0",
@@ -36,6 +47,7 @@
 		"babel-jest": "^29.7.0",
 		"babel-loader": "^9.1.3",
 		"babel-plugin-i18next-extract": "^0.9.0",
+		"chromatic": "^7.2.0",
 		"css-loader": "^6.6.0",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
@@ -46,6 +58,7 @@
 		"eslint-plugin-n": "^16.1.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-storybook": "^0.6.13",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"identity-obj-proxy": "^3.0.0",
@@ -53,10 +66,13 @@
 		"jest-environment-jsdom": "^29.7.0",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "3.0.3",
+		"react-dom": "^18.2.0",
 		"react-test-renderer": "^18.2.0",
 		"regenerator-runtime": "^0.14.0",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
+		"storybook": "^7.4.2",
+		"storybook-css-modules": "^1.0.8",
 		"style-loader": "^3.3.1",
 		"stylelint": "^15.10.3",
 		"stylelint-config-standard-scss": "^11.0.0",
