--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,37 @@
 name: linting, testing, building
-run-name: ${{ github.actor }} CI for production-project🚀
+
 on:
   push:
-    branches: [master]
+    branches: ['main']
   pull_request:
-    branches: [master]
+    branches: ['main']
 jobs:
   pipeline:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Starting Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: intall modules
         run: npm intall
+
       - name: build production project
         run: npm run build:prod
+
       - name: linting typescript
         run: npm run lint:ts
+
       - name: linting css
         run: npm run lint:scss
+
       - name: unit testing
         run: npm run test:unit
