--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: intall modules
-        run: npm intall
+      - name: install modules
+        run: npm install
 
       - name: build production project
         run: npm run build:prod
