--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
 		"storybook": "storybook dev -p 6006 -c ./config/storybook",
 		"storybook:build": "storybook build -c ./config/storybook"
 	},
+	"moduleDirectories": [
+		"node_modules",
+		"src"
+	],
 	"keywords": [],
 	"author": "Dreamatti",
 	"license": "ISC",
@@ -58,6 +62,7 @@
 		"eslint-plugin-n": "^16.1.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-storybook": "^0.6.13",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
@@ -76,6 +81,7 @@
 		"style-loader": "^3.3.1",
 		"stylelint": "^15.10.3",
 		"stylelint-config-standard-scss": "^11.0.0",
+		"ts-jest": "^29.1.1",
 		"ts-loader": "^9.2.6",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5",
@@ -86,12 +92,14 @@
 	},
 	"dependencies": {
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+		"@reduxjs/toolkit": "^1.9.5",
 		"@types/node": "^20.6.2",
 		"i18next": "^23.5.1",
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.2",
 		"react": "^18.2.0",
 		"react-i18next": "^13.2.2",
+		"react-redux": "^8.1.2",
 		"react-router": "^6.16.0",
 		"react-router-dom": "^6.16.0",
 		"ts-node-dev": "^2.0.0"
