--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"eslint-plugin-n": "^16.1.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-storybook": "^0.6.13",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
