--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.ts",
 	"scripts": {
 		"start": "webpack serve --env port=3000",
+		"start:dev:server": "node ./json-server/index.js",
 		"build:prod": "webpack --env mode=production",
 		"build:dev": "webpack --env mode=development",
 		"lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
@@ -13,8 +14,7 @@
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
 		"test:unit": "npx jest --config ./config/jest/jest.config.ts",
 		"storybook": "storybook dev -p 6006 -c ./config/storybook",
-		"storybook:build": "storybook build -c ./config/storybook",
-		"prepare": "husky install"
+		"storybook:build": "storybook build -c ./config/storybook"
 	},
 	"moduleDirectories": [
 		"node_modules",
@@ -41,8 +41,8 @@
 		"@testing-library/jest-dom": "^6.1.3",
 		"@testing-library/react": "^14.0.0",
 		"@types/jest": "^29.5.5",
-		"@types/react": "^17.0.65",
-		"@types/react-dom": "^17.0.20",
+		"@types/react": "^18.2.22",
+		"@types/react-dom": "^18.2.7",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/webpack": "^5.28.0",
 		"@types/webpack-bundle-analyzer": "^4.6.0",
@@ -93,11 +93,13 @@
 	},
 	"dependencies": {
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-		"@reduxjs/toolkit": "^1.9.5",
+		"@reduxjs/toolkit": "^1.9.6",
 		"@types/node": "^20.6.2",
+		"axios": "^1.5.0",
 		"i18next": "^23.5.1",
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.2",
+		"json-server": "^0.17.3",
 		"react": "^18.2.0",
 		"react-i18next": "^13.2.2",
 		"react-redux": "^8.1.2",
