--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,7 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"semi": false,
-	"proseWrap": "always"
+	"proseWrap": "always",
+	"printWidth": 100,
+	"arrowParens": "avoid"
 }
