fix typings, add profile typescript strict mode!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"noImplicitAny": true,
 		"module": "ESNext",
 		"target": "es5",
+		"strict": true,
 		"jsx": "react-jsx",
 		"allowJs": true,
 		"moduleResolution": "node",
