--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.ts",
 	"scripts": {
 		"start": "webpack serve --env port=3000",
+		"start:dev": "concurrently \"npm start\" \"npm run start:dev:server\" ",
 		"start:dev:server": "node ./json-server/index.js",
 		"build:prod": "webpack --env mode=production",
 		"build:dev": "webpack --env mode=development",
@@ -96,6 +97,7 @@
 		"@reduxjs/toolkit": "^1.9.6",
 		"@types/node": "^20.6.2",
 		"axios": "^1.5.0",
+		"concurrently": "^8.2.1",
 		"i18next": "^23.5.1",
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.2",
