--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,17 @@
 		"allowJs": true,
 		"moduleResolution": "node",
 		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"forceConsistentCasingInFileNames": true,
 	},
 	"ts-node": {
 		"compilerOptions": {
 			"module": "CommonJS"
 		}
 	},
-	"include": ["./config/jest/setupTests.ts", "./src/**/*.ts", "./src/**/*.tsx"]
+	"include": [
+		"./config/jest/setupTests.ts",
+		"./src/**/*.ts",
+		"./src/**/*.tsx"
+	]
 }
