--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
 		"test:unit": "npx jest --config ./config/jest/jest.config.ts",
 		"storybook": "storybook dev -p 6006 -c ./config/storybook",
-		"storybook:build": "storybook build -c ./config/storybook"
+		"storybook:build": "storybook build -c ./config/storybook",
+		"stylelint-scss-check": "stylelint-config-prettier-scss-check"
+		
 	},
 	"keywords": [],
 	"author": "Dreamatti",
@@ -79,6 +81,7 @@
 		"storybook-css-modules": "^1.0.8",
 		"style-loader": "^3.3.1",
 		"stylelint": "^15.10.3",
+		"stylelint-config-prettier-scss": "^1.0.0",
 		"stylelint-config-standard-scss": "^11.0.0",
 		"ts-jest": "^29.1.1",
 		"ts-loader": "^9.2.6",
