--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"storybook": "storybook dev -p 6006 -c ./config/storybook",
 		"storybook:build": "storybook build -c ./config/storybook",
 		"stylelint-scss-check": "stylelint-config-prettier-scss-check"
-		
 	},
 	"keywords": [],
 	"author": "Dreamatti",
@@ -44,6 +43,7 @@
 		"@types/react": "^18.2.22",
 		"@types/react-dom": "^18.2.7",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/react-window": "^1.8.7",
 		"@types/webpack": "^5.28.0",
 		"@types/webpack-bundle-analyzer": "^4.6.0",
 		"@types/webpack-dev-server": "^4.7.2",
@@ -95,6 +95,7 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.6",
 		"@types/node": "^20.6.2",
+		"@types/react-virtualized-auto-sizer": "^1.0.2",
 		"axios": "^1.5.0",
 		"concurrently": "^8.2.1",
 		"i18next": "^23.5.1",
@@ -106,6 +107,8 @@
 		"react-redux": "^8.1.2",
 		"react-router": "^6.16.0",
 		"react-router-dom": "^6.16.0",
+		"react-virtualized-auto-sizer": "^1.0.20",
+		"react-window": "^1.8.9",
 		"ts-node-dev": "^2.0.0"
 	}
 }
