--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@babel/preset-react": "^7.22.15",
 		"@babel/preset-typescript": "^7.22.15",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+		"@storybook/addon-actions": "^7.5.1",
 		"@storybook/addon-essentials": "^7.4.2",
 		"@storybook/addon-interactions": "^7.4.2",
 		"@storybook/addon-links": "^7.4.2",
