--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "webpack serve --env port=3000",
 		"start:dev": "concurrently \"npm start\" \"npm run start:dev:server\" ",
 		"start:dev:server": "node ./json-server/index.js",
-		"build:prod": "webpack --env mode=production",
+		"build:prod": "webpack --env mode=production apiUrl=https://production-project-server-khw8gfbr4-michaels-projects-1ee9a16c.vercel.app",
 		"build:dev": "webpack --env mode=development",
 		"lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
 		"lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
@@ -99,6 +99,7 @@
 		"@types/react-virtualized-auto-sizer": "^1.0.2",
 		"axios": "^1.5.0",
 		"concurrently": "^8.2.1",
+		"copy-webpack-plugin": "^11.0.0",
 		"i18next": "^23.5.1",
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.2",
