--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/core": "^7.22.19",
+		"@babel/plugin-transform-class-properties": "^7.22.5",
+		"@babel/plugin-transform-nullish-coalescing-operator": "^7.22.11",
+		"@babel/plugin-transform-optional-chaining": "^7.23.0",
 		"@babel/preset-env": "^7.22.20",
 		"@babel/preset-react": "^7.22.15",
 		"@babel/preset-typescript": "^7.22.15",
@@ -47,7 +50,6 @@
 		"@types/react-window": "^1.8.7",
 		"@types/webpack": "^5.28.0",
 		"@types/webpack-bundle-analyzer": "^4.6.0",
-		"@types/webpack-dev-server": "^4.7.2",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
 		"babel-jest": "^29.7.0",
@@ -96,6 +98,7 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.6",
 		"@types/node": "^20.6.2",
+		"@types/react-leaflet": "^3.0.0",
 		"@types/react-virtualized-auto-sizer": "^1.0.2",
 		"axios": "^1.5.0",
 		"concurrently": "^8.2.1",
