--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@types/react": "^18.2.22",
 		"@types/react-dom": "^18.2.7",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/react-virtualized": "^9.21.26",
 		"@types/react-window": "^1.8.7",
 		"@types/webpack": "^5.28.0",
 		"@types/webpack-bundle-analyzer": "^4.6.0",
@@ -60,6 +61,7 @@
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-config-standard-with-typescript": "^39.0.0",
+		"eslint-plugin-dreamatty-path-checker-plugin": "^0.0.2",
 		"eslint-plugin-i18next": "^6.0.3",
 		"eslint-plugin-import": "^2.28.1",
 		"eslint-plugin-jest-dom": "^5.1.0",
@@ -98,8 +100,6 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.6",
 		"@types/node": "^20.6.2",
-		"@types/react-leaflet": "^3.0.0",
-		"@types/react-virtualized-auto-sizer": "^1.0.2",
 		"axios": "^1.5.0",
 		"concurrently": "^8.2.1",
 		"copy-webpack-plugin": "^11.0.0",
@@ -112,8 +112,7 @@
 		"react-redux": "^8.1.2",
 		"react-router": "^6.16.0",
 		"react-router-dom": "^6.16.0",
-		"react-virtualized-auto-sizer": "^1.0.20",
-		"react-window": "^1.8.9",
+		"react-virtuoso": "^4.6.2",
 		"ts-node-dev": "^2.0.0"
 	}
 }
