--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"test:unit": "npx jest --config ./config/jest/jest.config.ts",
 		"storybook": "storybook dev -p 6006 -c ./config/storybook",
 		"storybook:build": "storybook build -c ./config/storybook",
-		"stylelint-scss-check": "stylelint-config-prettier-scss-check"
+		"stylelint-scss-check": "stylelint-config-prettier-scss-check",
+		"generate:slice": "node ./scripts/createSlice/index.js"
 	},
 	"keywords": [],
 	"author": "Dreamatti",
