--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jest-html-reporters": "^3.1.4",
 		"mini-css-extract-plugin": "^2.5.3",
 		"prettier": "3.0.3",
 		"react-dom": "^18.2.0",
