add private route with required roles

--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"webpack-dev-server": "^4.7.4"
 	},
 	"dependencies": {
+		"@floating-ui/react": "^0.26.1",
 		"@headlessui/react": "^1.7.17",
 		"@reduxjs/toolkit": "^1.9.6",
 		"@types/node": "^20.6.2",
