--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,9 @@
 {
 	"presets": [
 		"@babel/preset-env",
-		"@babel/preset-typescript",
+		["@babel/preset-typescript", {
+			"isTsx": true
+		}],
 		[
 			"@babel/preset-react", 
 			{ 
@@ -13,6 +15,7 @@
 		"i18next-extract",
 		"@babel/plugin-transform-class-properties",
 		"@babel/plugin-transform-nullish-coalescing-operator",
-		"@babel/plugin-transform-optional-chaining"
+		"@babel/plugin-transform-optional-chaining",
+		"@babel/plugin-transform-runtime"
 	]
 }
