--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"@babel/plugin-transform-class-properties": "^7.22.5",
 		"@babel/plugin-transform-nullish-coalescing-operator": "^7.22.11",
 		"@babel/plugin-transform-optional-chaining": "^7.23.0",
+		"@babel/plugin-transform-runtime": "^7.23.2",
+		"@babel/plugin-transform-typescript": "^7.22.15",
 		"@babel/preset-env": "^7.22.20",
 		"@babel/preset-react": "^7.22.15",
 		"@babel/preset-typescript": "^7.22.15",
@@ -44,6 +46,7 @@
 		"@svgr/webpack": "^8.1.0",
 		"@testing-library/jest-dom": "^6.1.3",
 		"@testing-library/react": "^14.0.0",
+		"@types/circular-dependency-plugin": "^5.0.7",
 		"@types/jest": "^29.5.5",
 		"@types/react": "^18.2.22",
 		"@types/react-dom": "^18.2.7",
@@ -58,6 +61,7 @@
 		"babel-loader": "^9.1.3",
 		"babel-plugin-i18next-extract": "^0.9.0",
 		"chromatic": "^7.2.0",
+		"circular-dependency-plugin": "^5.2.2",
 		"css-loader": "^6.6.0",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
@@ -72,6 +76,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-storybook": "^0.6.13",
 		"file-loader": "^6.2.0",
+		"fork-ts-checker-webpack-plugin": "^9.0.2",
 		"html-webpack-plugin": "^5.5.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
@@ -100,6 +105,7 @@
 		"webpack-dev-server": "^4.7.4"
 	},
 	"dependencies": {
+		"@babel/runtime": "^7.23.2",
 		"@floating-ui/react": "^0.26.1",
 		"@headlessui/react": "^1.7.17",
 		"@reduxjs/toolkit": "^1.9.6",
