--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
 		"i18next-http-backend": "^2.2.2",
 		"json-server": "^0.17.3",
 		"react": "^18.2.0",
+		"react-device-detect": "^2.2.3",
 		"react-i18next": "^13.2.2",
 		"react-redux": "^8.1.2",
 		"react-router": "^6.16.0",
