added Gesture and Spring libraries and connected them using context And added animation to drawer

--- a/package.json
+++ b/package.json
@@ -108,8 +108,10 @@
 		"@babel/runtime": "^7.23.2",
 		"@floating-ui/react": "^0.26.1",
 		"@headlessui/react": "^1.7.17",
+		"@react-spring/web": "^9.7.3",
 		"@reduxjs/toolkit": "^1.9.6",
 		"@types/node": "^20.6.2",
+		"@use-gesture/react": "^10.3.0",
 		"axios": "^1.5.0",
 		"concurrently": "^8.2.1",
 		"copy-webpack-plugin": "^11.0.0",
