--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.ts",
 	"scripts": {
 		"start": "webpack serve --env port=3000",
+		"start:vite": "vite",
 		"start:dev": "concurrently \"npm start\" \"npm run start:dev:server\" ",
+		"start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\" ",
 		"start:dev:server": "node ./json-server/index.js",
 		"build:prod": "webpack --env mode=production apiUrl=https://production-project-server-git-67c65e-michaels-projects-1ee9a16c.vercel.app",
 		"build:dev": "webpack --env mode=development",
@@ -57,6 +59,7 @@
 		"@types/webpack-bundle-analyzer": "^4.6.0",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
+		"@vitejs/plugin-react": "^4.1.1",
 		"babel-jest": "^29.7.0",
 		"babel-loader": "^9.1.3",
 		"babel-plugin-i18next-extract": "^0.9.0",
@@ -100,6 +103,8 @@
 		"ts-morph": "^20.0.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5",
+		"vite": "^4.5.0",
+		"vite-plugin-svgr": "^4.1.0",
 		"webpack": "^5.69.1",
 		"webpack-bundle-analyzer": "^4.9.1",
 		"webpack-cli": "^4.9.2",
