--- a/package.json
+++ b/package.json
@@ -71,17 +71,19 @@
 		"eslint-config-standard-with-typescript": "^39.0.0",
 		"eslint-plugin-dreamatty-path-checker-plugin": "^0.0.9",
 		"eslint-plugin-i18next": "^6.0.3",
-		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-jest-dom": "^5.1.0",
 		"eslint-plugin-n": "^16.1.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-storybook": "^0.6.13",
+		"eslint-plugin-unused-imports": "^3.0.0",
 		"file-loader": "^6.2.0",
 		"fork-ts-checker-webpack-plugin": "^9.0.2",
 		"html-webpack-plugin": "^5.5.0",
 		"identity-obj-proxy": "^3.0.0",
+		"install": "^0.13.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-html-reporters": "^3.1.4",
