--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"storybook": "storybook dev -p 6006 -c ./config/storybook",
 		"storybook:build": "storybook build -c ./config/storybook",
 		"stylelint-scss-check": "stylelint-config-prettier-scss-check",
-		"generate:slice": "node ./scripts/createSlice/index.js"
+		"generate:slice": "node ./scripts/createSlice/index.js",
+		"postinstall": "rm -rf node_modules/.cache"
 	},
 	"keywords": [],
 	"author": "Dreamatti",
@@ -35,16 +36,16 @@
 		"@babel/preset-react": "^7.22.15",
 		"@babel/preset-typescript": "^7.22.15",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-		"@storybook/addon-actions": "^7.5.1",
-		"@storybook/addon-essentials": "^7.4.2",
-		"@storybook/addon-interactions": "^7.4.2",
-		"@storybook/addon-links": "^7.4.2",
+		"@storybook/addon-actions": "^7.5.3",
+		"@storybook/addon-essentials": "^7.5.3",
+		"@storybook/addon-interactions": "^7.5.3",
+		"@storybook/addon-links": "^7.5.3",
 		"@storybook/addon-onboarding": "^1.0.8",
 		"@storybook/addon-styling": "^2.0.2-next.4",
-		"@storybook/blocks": "^7.4.2",
-		"@storybook/react": "^7.4.2",
-		"@storybook/react-webpack5": "^7.4.2",
-		"@storybook/testing-library": "^0.2.1",
+		"@storybook/blocks": "^7.5.3",
+		"@storybook/react": "^7.5.3",
+		"@storybook/react-webpack5": "^7.5.3",
+		"@storybook/testing-library": "^0.2.2",
 		"@svgr/webpack": "^8.1.0",
 		"@testing-library/jest-dom": "^6.1.3",
 		"@testing-library/react": "^14.0.0",
@@ -77,7 +78,7 @@
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-storybook": "^0.6.13",
+		"eslint-plugin-storybook": "^0.6.15",
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"file-loader": "^6.2.0",
 		"fork-ts-checker-webpack-plugin": "^9.0.2",
@@ -94,7 +95,8 @@
 		"regenerator-runtime": "^0.14.0",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
-		"storybook": "^7.4.2",
+		"storybook": "^7.5.3",
+		"storybook-addon-themes": "^6.1.0",
 		"storybook-css-modules": "^1.0.8",
 		"style-loader": "^3.3.1",
 		"stylelint": "^15.10.3",
@@ -118,6 +120,7 @@
 		"@headlessui/react": "^1.7.17",
 		"@react-spring/web": "^9.7.3",
 		"@reduxjs/toolkit": "^1.9.6",
+		"@storybook/addon-themes": "^7.5.3",
 		"@types/node": "^20.6.2",
 		"@use-gesture/react": "^10.3.0",
 		"axios": "^1.5.0",
