add e2e tests , updated typescript

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,14 @@
 #        run: npm run test:ui:ci
 #        if: always()
 
+			 #- name: screenshot testing
+      #  run: npm run test:ui:ci
+      #  if: always()
+      #- name: Generate HTML report
+      #  run: npm run test:ui:report
+      #  if: always()
+     
+
 name: linting, testing, building
 on:
   push:
@@ -74,20 +82,17 @@ jobs:
       - name: build storybook
         run: npm run storybook:build
         if: always()
-      #- name: screenshot testing
-      #  run: npm run test:ui:ci
-      #  if: always()
-      #- name: Generate HTML report
-      #  run: npm run test:ui:report
-      #  if: always()
-      #- name: Setup Pages
-      #  uses: actions/configure-pages@v2
-      #  if: always()
-      #- name: Upload artifact
-      #  uses: actions/upload-pages-artifact@v1
-      #  if: always()
-      #  with:
-      #    path: '.loki'
+			- name: unit testing
+				if: always()
+				run: npm run test:unit
+			- name: Setup Pages
+        uses: actions/configure-pages@v2
+        if: always()
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        if: always()
+        with:
+          path: 'reports'
       - name: Deploy to GitHub Pages
         id: deployment
         if: always()
@@ -111,6 +116,4 @@ jobs:
         if: always()
       - name: linting css
         run: npm run lint:scss
-      - name: unit testing
-        if: always()
-        run: npm run test:unit
+     
