--- a/package.json
+++ b/package.json
@@ -16,17 +16,16 @@
 		"lint:scss": "npx stylelint \"**/*.scss\"",
 		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
 		"test:unit": "npx jest --config ./config/jest/jest.config.ts",
+		"test:e2e": "npx cypress open",
 		"storybook": "storybook dev -p 6006 -c ./config/storybook",
 		"storybook:build": "storybook build -c ./config/storybook",
 		"stylelint-scss-check": "stylelint-config-prettier-scss-check",
 		"generate:slice": "node ./scripts/createSlice/index.js",
 		"postinstall": "rm -rf node_modules/.cache"
 	},
-
 	"lint-staged": {
-    "**/*.{ts,tsx}": "eslint"
-  },
-
+		"**/*.{ts,tsx}": "eslint"
+	},
 	"keywords": [],
 	"author": "Dreamatti",
 	"license": "ISC",
@@ -68,10 +67,11 @@
 		"@vitejs/plugin-react": "^4.1.1",
 		"babel-jest": "^29.7.0",
 		"babel-loader": "^9.1.3",
-		"babel-plugin-i18next-extract": "^0.9.0",
+		"babel-plugin-i18next-extract": "^0.9.2",
 		"chromatic": "^7.2.0",
 		"circular-dependency-plugin": "^5.2.2",
 		"css-loader": "^6.6.0",
+		"cypress": "^13.5.1",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-config-standard-with-typescript": "^39.0.0",
@@ -102,6 +102,7 @@
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"storybook": "^7.5.3",
+		"storybook-addon-mock": "^4.3.0",
 		"storybook-addon-themes": "^6.1.0",
 		"storybook-css-modules": "^1.0.8",
 		"style-loader": "^3.3.1",
@@ -112,7 +113,7 @@
 		"ts-loader": "^9.2.6",
 		"ts-morph": "^20.0.0",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.9.5",
+		"typescript": "^5.2.2",
 		"vite": "^4.5.0",
 		"vite-plugin-svgr": "^4.1.0",
 		"webpack": "^5.69.1",
@@ -127,6 +128,7 @@
 		"@react-spring/web": "^9.7.3",
 		"@reduxjs/toolkit": "^1.9.6",
 		"@storybook/addon-themes": "^7.5.3",
+		"@types/i18n": "^0.13.9",
 		"@types/node": "^20.6.2",
 		"@use-gesture/react": "^10.3.0",
 		"axios": "^1.5.0",
