--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "storybook:build": "storybook build -c ./config/storybook",
     "stylelint-scss-check": "stylelint-config-prettier-scss-check",
     "generate:slice": "node ./scripts/createSlice/index.js",
-    "postinstall": "rm -rf node_modules/.cache"
+    "postinstall": "rm -rf node_modules/.cache",
+    "remove-feature": "ts-node ./scripts/remove-feature.ts"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
